# aegixpass-svelte

./: .gitignore  ALGORITHM.md  ALGORITHM_v1.md  ALGORITHM_v2.md  README.md  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  vite.config.ts  vitest.config.ts
.github/workflows/: deploy.yml
AegixPass/: .gitignore  .gitlab-ci.yml  ALGORITHM.md  Cargo.toml  README.md  default.json
AegixPass/src/: core.rs  lib.rs  main.rs
src/: app.css  app.html
src/lib/: constants.ts  markdown.spec.ts  markdown.ts
src/lib/aegixpass/: core.spec.ts  core.ts  generator.ts  index.ts  presetManager.spec.ts  presetManager.ts  types.ts  worker.ts
src/lib/aegixpass/presets/: no-symbol.preset.json  pin.preset.json  short.preset.json
src/routes/: +layout.svelte  +page.svelte
src/routes/algorithm/: +page.svelte  +page.ts
src/routes/algorithm/v1/: +page.svelte  +page.ts
src/routes/algorithm/v2/: +page.svelte  +page.ts
src/routes/custom-presets/: +page.svelte
src/routes/robots.txt/: +server.ts
src/routes/sitemap.xml/: +server.ts
static/preset/: index.json
static/preset/v1/: default.json  index.json  long-no-symbol.json  long.json  no-symbol.json  sha256.json  sha3.json  short-no-symbol.json  short.json
static/preset/v2/: index.json  long-no-symbol.json  long.json  no-symbol.json  pin.json  sha256.json  short-no-symbol.json  short.json
