[package]
name = "aegixpass"
version = "0.2.0"
edition = "2024"
license = "LGPL-2.1"
authors = ["takuron <takuron@163.com>"]
description = "A deterministic password generator."
repository = "https://github.com/takuron/AegixPass"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1.8.2"
sha2 = "0.10.9"
sha3 = "0.10.8"
argon2 = "0.5.3"
scrypt = "0.11.0"
rand = "0.9.2"
rand_chacha = "0.9.0"
rand_hc = "0.4.0"
thiserror = "2.0"

# --- 命令行界面 ---
# clap 用于解析命令行参数
clap = { version = "4.5.4", features = ["derive"] }